--- a/.github/workflows/lint-and-test.yaml
+++ b/.github/workflows/lint-and-test.yaml
@@ -10,7 +10,7 @@ jobs:
             yarn
             yarn lint
 
-  package_check:
+  package-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
