--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'GitHub Action for Symbiosis - install symcli'
+name: 'Install Symbiosis CLI'
 description: 'Manage Symbiosis with symcli'
 author: 'Buster Styren <buster@symbiosis.host>'
 branding:
