--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/tool-cache": "^2.0.1"
+    "@actions/tool-cache": "^2.0.1",
+    "@octokit/rest": "^19.0.5"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.0",
